fix: 59 - get user & progress by param
