# src/routes/progress.router.ts
@@ -6,8 +6,8 @@ const progressRouter = Router();
 
 const progressController = new ProgressController();
 
-progressRouter.get('/', progressController.getProgress.bind(progressController));
+progressRouter.get('/:userId', progressController.getProgress.bind(progressController));
 
-progressRouter.put('/', progressController.update.bind(progressController));
+progressRouter.put('/:userId', progressController.update.bind(progressController));
 
 export { progressRouter };
